--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-streamlit==1.30.0
-tensorflow==2.15.0
-numpy==1.24.4
-pillow==10.1.0
+imutils==0.5.4
+keras==2.11.0
+matplotlib==3.7.1
+numpy==1.23.3
+opencv-python==4.6.0.66
+pandas==1.5.3
+Pillow==9.4.0
+scikit-learn==1.2.1
+scipy==1.10.1
+streamlit==1.19.0
+tensorflow==2.11.0
